// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--log-level > shows debug log when passing --log-level=debug > stdout 1`] = `
[info] Initialized logger with consola options: { types:
   { silent: { level: -1 },
     fatal: { level: 0 },
     error: { level: 0 },
     warn: { level: 1 },
     log: { level: 2 },
     info: { level: 3 },
     success: { level: 3 },
     fail: { level: 3 },
     ready: { level: 3 },
     start: { level: 3 },
     box: { level: 3 },
     debug: { level: 4 },
     trace: { level: 5 },
     verbose: { level: Infinity } },
  throttle: 1000,
  throttleMin: 5,
  formatOptions: { date: false, colors: false, compact: true },
  level: 4,
  defaults: { level: 1 },
  prompt: [Function: prompt],
  reporters: [ BasicReporter {} ] }
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[info] Resolved options: { logLevel: 'debug',
  showConfig: false,
  showSummary: false,
  isWorkerThread: false,
  maxWorkers: 1,
  minWorkers: 1,
  list: false,
  dryRun: false,
  configPath: '/ROOT/test/fixtures/main/nadle.config.ts' }
[info] Detected environments: { CI: false, TEST: true }
[log] <Dim>Using config file from /ROOT/test/fixtures/main/nadle.config.ts
</BoldDim>
[info] Resolved tasks: [ hello ]
[info] Execution started
[info] Task <Bold>hello</BoldDim> queued
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started
Hello from nadle!
[log] <Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[info] Execution finished
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>1</BoldDim><Dim> task executed)</BoldDim>
`;

exports[`--log-level > shows error log only when passing --log-level=error > stdout 1`] = `Hello from nadle!`;

exports[`--log-level > shows error log only when passing --log-level=error > stdout 2`] = `"Hello from nadle!"`;

exports[`--log-level > shows info log when passing --log-level=info > stdout 1`] = `
[info] Initialized logger with consola options: { types:
   { silent: { level: -1 },
     fatal: { level: 0 },
     error: { level: 0 },
     warn: { level: 1 },
     log: { level: 2 },
     info: { level: 3 },
     success: { level: 3 },
     fail: { level: 3 },
     ready: { level: 3 },
     start: { level: 3 },
     box: { level: 3 },
     debug: { level: 4 },
     trace: { level: 5 },
     verbose: { level: Infinity } },
  throttle: 1000,
  throttleMin: 5,
  formatOptions: { date: false, colors: false, compact: true },
  level: 3,
  defaults: { level: 1 },
  prompt: [Function: prompt],
  reporters: [ BasicReporter {} ] }
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[info] Resolved options: { logLevel: 'info',
  showConfig: false,
  showSummary: false,
  isWorkerThread: false,
  maxWorkers: 1,
  minWorkers: 1,
  list: false,
  dryRun: false,
  configPath: '/ROOT/test/fixtures/main/nadle.config.ts' }
[info] Detected environments: { CI: false, TEST: true }
[log] <Dim>Using config file from /ROOT/test/fixtures/main/nadle.config.ts
</BoldDim>
[info] Resolved tasks: [ hello ]
[info] Execution started
[info] Task <Bold>hello</BoldDim> queued
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started
Hello from nadle!
[log] <Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[info] Execution finished
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>1</BoldDim><Dim> task executed)</BoldDim>
`;
